<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SecondActivity">

    <TextView
        android:id="@+id/titulo3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-black"
        android:text="@string/bienvenido_a_my_favourites_pets"
        android:textSize="@dimen/tesi"
        app:layout_constraintBottom_toTopOf="@+id/nombre4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/nombre3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/laymar2"
        android:text="@string/nombre"
        app:layout_constraintBottom_toTopOf="@+id/cientifico3"
        app:layout_constraintEnd_toStartOf="@+id/nombre4"
        app:layout_constraintHorizontal_bias="0.328"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titulo3"
        app:layout_constraintVertical_bias="0.105" />

    <EditText
        android:id="@+id/nombre4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/laymar3"
        android:autofillHints=""
        android:ems="10"
        android:inputType="textPersonName"
        android:text=""
        android:maxLength="10"
        app:layout_constraintBottom_toTopOf="@+id/cientifico4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.691"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        tools:ignore="LabelFor" />

    <TextView
        android:id="@+id/cientifico3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/laymar4"
        android:text="@string/nombre_cientifico"
        app:layout_constraintBottom_toTopOf="@+id/pelo3"
        app:layout_constraintEnd_toStartOf="@+id/cientifico4"
        app:layout_constraintHorizontal_bias="0.592"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <EditText
        android:id="@+id/cientifico4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:text=""
        android:maxLength="30"
        app:layout_constraintBottom_toTopOf="@+id/pelo4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.706"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.913"
        tools:ignore="LabelFor" />

    <TextView
        android:id="@+id/pelo3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tipo_de_pelo"
        app:layout_constraintBottom_toTopOf="@+id/clase3"
        app:layout_constraintEnd_toStartOf="@+id/pelo4"
        app:layout_constraintHorizontal_bias="0.362"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.913" />

    <EditText
        android:id="@+id/pelo4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/laymar5"
        android:autofillHints=""
        android:ems="10"
        android:inputType="textPersonName"
        android:text=""
        android:maxLength="10"
        app:layout_constraintBottom_toTopOf="@+id/clase4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.686"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.803"
        tools:ignore="LabelFor" />

    <TextView
        android:id="@+id/clase3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/clase"
        app:layout_constraintBottom_toTopOf="@+id/amor3"
        app:layout_constraintEnd_toStartOf="@+id/clase4"
        app:layout_constraintHorizontal_bias="0.207"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.928" />

    <EditText
        android:id="@+id/clase4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:ems="10"
        android:inputType="textPersonName"
        android:text=""
        android:maxLength="10"
        app:layout_constraintBottom_toTopOf="@+id/amor4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.691"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.976"
        tools:ignore="LabelFor" />

    <TextView
        android:id="@+id/amor3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/amorosidad1"
        app:layout_constraintBottom_toTopOf="@+id/enlace3"
        app:layout_constraintEnd_toStartOf="@+id/amor4"
        app:layout_constraintHorizontal_bias="0.247"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.918" />

    <Spinner
        android:id="@+id/amor4"
        android:layout_width="@dimen/laywi6"
        android:layout_height="@dimen/layhe5"
        app:layout_constraintBottom_toTopOf="@+id/enlace4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.541"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.984" />

    <Button
        android:id="@+id/btnañadir2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/a_adir"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btnsalir"
        app:layout_constraintHorizontal_bias="0.534"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.871" />

    <Button
        android:id="@+id/btnsalir"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/salir"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.507"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.871" />

    <ImageButton
        android:id="@+id/camara"
        android:layout_width="@dimen/laywi7"
        android:layout_height="@dimen/laywi7"
        android:contentDescription="@string/todo"
        app:layout_constraintBottom_toTopOf="@+id/btnañadir2"
        app:layout_constraintEnd_toStartOf="@+id/galeria3"
        app:layout_constraintHorizontal_bias="0.378"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.945"
        app:srcCompat="@drawable/descarga3"
        tools:srcCompat="@drawable/descarga3" />

    <ImageView
        android:id="@+id/fotoselec"
        android:layout_width="@dimen/laywi8"
        android:layout_height="@dimen/layhe6"
        android:contentDescription="@string/todo"
        app:layout_constraintBottom_toTopOf="@+id/btnsalir"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.946"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/descarga" />

    <ImageView
        android:id="@+id/galeria3"
        android:layout_width="@dimen/laywi7"
        android:layout_height="@dimen/laywi7"
        android:contentDescription="@string/todo"
        app:layout_constraintBottom_toTopOf="@+id/btnsalir"
        app:layout_constraintEnd_toStartOf="@+id/fotoselec"
        app:layout_constraintHorizontal_bias="0.738"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.945"
        app:srcCompat="@drawable/descarga1" />

    <TextView
        android:id="@+id/enlace3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enlace"
        app:layout_constraintBottom_toTopOf="@+id/camara"
        app:layout_constraintEnd_toStartOf="@+id/enlace4"
        app:layout_constraintHorizontal_bias="0.383"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.948" />

    <EditText
        android:id="@+id/enlace4"
        android:layout_width="@dimen/laywi9"
        android:layout_height="@dimen/layhe7"
        android:autofillHints=""
        android:maxLength="400"
        app:layout_constraintBottom_toTopOf="@+id/fotoselec"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.674"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.983"
        tools:ignore="LabelFor,TextFields" />

    <TextView
        android:id="@+id/camara1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/camara"
        app:layout_constraintBottom_toTopOf="@+id/btnañadir2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.138"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/camara"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/Galeria1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/galeria"
        app:layout_constraintBottom_toTopOf="@+id/btnañadir2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.486"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/camara"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/galeria"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/galeria"
        app:layout_constraintBottom_toTopOf="@+id/btnañadir2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.486"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/camara"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/foto_seleccionada"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.949"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fotoselec"
        app:layout_constraintVertical_bias="0.0" />

</androidx.constraintlayout.widget.ConstraintLayout>